--- a/src/features/user/user.css
+++ b/src/features/user/user.css
@@ -3,9 +3,20 @@
 @tailwind utilities;
 
 
-.user{
+.user {
     @apply h-screen w-full lg:flex bg-green-50
 }
-.userContainer{
-    @apply grid grid-cols-3 grid-flow-row
+
+.userContainer {
+    @apply block mt-10 ml-4 
+}
+
+.userList {
+    @apply items-center  w-full p-5 m-3  border-2 border-emerald-200/50 shadow-xl shadow-emerald-200/50 rounded-md relative duration-500
+    grid grid-cols-1 grid-flow-row
+    lg:justify-evenly  lg:grid lg:grid-cols-4 lg:h-12
+}
+
+.userList:hover {
+    @apply border-slate-200 shadow-gray-300
 }
