--- a/src/features/dashboard/dashboard.css
+++ b/src/features/dashboard/dashboard.css
@@ -5,7 +5,7 @@
 
 .dashboard {
     @apply p-2.5 border-r-4 border-green-100 w-screen h-28 bg-emerald-100 shadow-lg shadow-emerald-200 
-    sm:h-24 sm:flex sm:items-center sm:justify-between lg:block lg:w-36 lg:h-full
+    sm:h-24 sm:flex sm:items-center sm:justify-between lg:block lg:w-36 md:h-full
 }
 
 .D-title {
